# turbine

./: .gitignore  LICENSE  README.md
.bsp/: scala-cli.json
.github/workflows/: api.yml  ingestion.yml  scala.yml  tokenization.yml  transformer.yml
.metals/: metals.lock.db  metals.mv.db
.scala-build/: ide-inputs.json
.scala-build/.bloop/: project_bd2c96d2de-test.json  project_bd2c96d2de.json
api/: Cargo.toml
api/src/: configuration.rs  main.rs  startup.rs  telemetry.rs  utils.rs
api/src/routes/: mod.rs
api/tests/api/: helpers.rs
ingestion/: Cargo.toml  build.sbt
ingestion/src/: downloader.rs  lib.rs  main.rs  mongo_utils.rs
ingestion/src/main/scala/driver/: FileFilter.scala
ingestion/tests/ingestion/: ing_tests.rs  main.rs
pineapple/: build.sbt
pineapple/src/main/scala/driver/: Driver.scala  ProcessRepos.scala
pineapple_api/: go.mod  go.sum
pineapple_api/src/: main.go
pineapple_api/src/controller/: controller.go
pineapple_api/src/migrations/: init.sql
pineapple_api/src/model/: model.go  transactions.go  types.go
pineapple_api/tests/: api_test.go  db_test.go
scripts/: init_db.sh
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs  main.rs  oai.rs  pinecone_utils.rs  tokenizer.rs
transformer/: __init__.py
transformer/src/: main.py
transformer/src/dataloader/: __init__.py  jax_dataloader.py
transformer/src/model/: __init__.py  attention.py  embeddings.py  transformer.py
transformer/src/train/: __init__.py  forwardpass.py  gradientupdate.py  loss.py  train.py  train_hk.py
transformer/src/utils/: utils.py
